--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>progress in a house like a punished child, find objects in order to escape</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -380,7 +380,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Play Chess in 3D Online</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -405,7 +405,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>3D models by Dungeon Mason</p>
+                            <p> Ride a Dragon in an open world, legs follow the height and inclination of the ground</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -429,7 +429,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Classic Arcade Game</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -453,7 +453,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Project aimed at using Pepper as an assistant, checking the wearing of the mask, booking control with Qrcode, independent support up to the table </p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -477,7 +477,7 @@
                             </p>
                         </div>
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Funny and beautiful</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
