--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
                 <p class="section-desc">
                     Here are some of my selected works I have done lately. Feel free to 
-                    check them out.
+                    check them out with the pink button.
                 </p>
             </div>
         </div> <!-- end heading-block -->
