--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Dragon Game 2D
+                                Dragon Game 2DD
                             </h4>
                             <p class="item-folio__cat">
                                 Game Maker Studio 2
