--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/hakim_galerie/escape0.png" class="thumb-link" title="Shutterbug" data-size="1882x1018">
                                 <img src="images/hakim_galerie/escape1.png" 
-                                     srcset="images/hakim_galerie/escape1.png 1x, images/hakim_galerie/escape1@2x.png 2x" alt="">
+                                     srcset="images/hakim_galerie/escape1.png 1x, images/hakim_galerie/escape1@2x.png 1x" alt="">
                             </a>    
                             <a href="https://youtu.be/uwV1crSgwgA" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -367,7 +367,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/hakim_galerie/chess10.png" class="thumb-link" title="Woodcraft" data-size="1068x598">
                                 <img src="images/hakim_galerie/chess1.png" 
-                                     srcset="images/hakim_galerie/chess1.png 1x, images/hakim_galerie/chess1@2x.png 2x" alt="">
+                                     srcset="images/hakim_galerie/chess1.png 1x, images/hakim_galerie/chess1@2x.png 1x" alt="">
                             </a>
                             <a href="https://github.com/HakimDuparcq/Chess" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -392,7 +392,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/hakim_galerie/dragon0.png" class="thumb-link" title="Grow Green" data-size="1050x700">
                                 <img src="images/hakim_galerie/dragon1.png" 
-                                     srcset="images/hakim_galerie/dragon1.png 1x, images/hakim_galerie/dragon1@2x.png 2x" alt="">
+                                     srcset="images/hakim_galerie/dragon1.png 1x, images/hakim_galerie/dragon1@2x.png 1x" alt="">
                             </a>
                             <a href="https://youtu.be/M-wWyyHw9Cc" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -416,7 +416,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/hakim_galerie/tetris0.png" class="thumb-link" title="Guitarist" data-size="803x736">
                                 <img src="images/hakim_galerie/tetris0.png" 
-                                     srcset="images/hakim_galerie/tetris0.png 1x, images/hakim_galerie/tetris0@2x.png 2x" alt="">
+                                     srcset="images/hakim_galerie/tetris0.png 1x, images/hakim_galerie/tetris0@2x.png 1x" alt="">
                             </a>
                             <a href="https://youtu.be/0l6o0bseRn8" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -470,7 +470,7 @@
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Dragon Game 2D
+                                Dragon Game 2DD
                             </h4>
                             <p class="item-folio__cat">
                                 Game Maker Studio 2
