--- a/index.html
+++ b/index.html
@@ -630,6 +630,16 @@
     </div><!-- end photoSwipe background -->
 
 
+    <div class="col-six tab-full">
+        <div id="visits">...</div>
+            <script>
+            function cb(response) {
+                document.getElementById('visits').innerText = response.value;
+            }
+            </script>
+            <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
+    </div>
+
     <!-- Java Script
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
