--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/hakim-duparcq-197968205/" title="Linkedinn">Linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/hakim-duparcq-197968205/" title="Linkedinn">Linkedinn</a></li>
                     <li><a href="https://github.com/HakimDuparcq" title="Github">Github</a></li>
                     
                 </ul>
