--- a/index.html
+++ b/index.html
@@ -573,15 +573,7 @@
 
     </section> <!-- end s-contact -->
 
-    <div class="col-six tab-full">
-        <div id="visits">...</div>
-            <script>
-            function cb(response) {
-                document.getElementById('visits').innerText = response.value;
-            }
-            </script>
-            <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
-    </div>
+    
 
     <!-- footer
     ================================================== -->
@@ -638,7 +630,15 @@
 
     </div><!-- end photoSwipe background -->
 
-
+    <div class="s-contact ss-dark target-section">
+        <div id="visits">...</div>
+            <script>
+            function cb(response) {
+                document.getElementById('visits').innerText = response.value;
+            }
+            </script>
+            <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
+    </div>
     
 
     <!-- Java Script
