--- a/index.html
+++ b/index.html
@@ -581,12 +581,19 @@
         <div class="row">
             <div class="column large-full ss-copyright">
                 <span>© Copyright Epitome 2019</span> 
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                <span>Design by <a href="https://www.styleshout.com/">StyleShout  </a></span>
+                <script>
+                    function cb(response) {
+                        document.getElementById('visits').innerText = response.value;
+                    }
+                    </script>
+                    <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
             </div>            
 
             <div class="ss-go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top"></a>
             </div>
+            
         </div>
     </footer>
 
