--- a/index.html
+++ b/index.html
@@ -582,12 +582,14 @@
             <div class="column large-full ss-copyright">
                 <span>© Copyright Epitome 2019</span> 
                 <span>Design by <a href="https://www.styleshout.com/">StyleShout  </a></span>
-                <script>
-                    function cb(response) {
-                        document.getElementById('visits').innerText = response.value;
-                    }
-                    </script>
-                    <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
+                <span>
+                    <script>
+                        function cb(response) {
+                            document.getElementById('visits').innerText = response.value;
+                        }
+                        </script>
+                        <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
+                </span>
             </div>            
 
             <div class="ss-go-top">
