--- a/index.html
+++ b/index.html
@@ -583,7 +583,8 @@
                 <span>© Copyright Epitome 2019</span> 
                 <span>Design by <a href="https://www.styleshout.com/">StyleShout  </a></span>
                 <span>
-                    <script>
+                    <div id="visits">...</div>
+                        <script>
                         function cb(response) {
                             document.getElementById('visits').innerText = response.value;
                         }
