--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                             document.getElementById('visits').innerText = response.value;
                         }
                         </script>
-                        <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/visits?callback=cb"></script>
+                        <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/3d730480-9a6c-4749-a435-978a0fcd6419?callback=cb"></script>
                 </span>
             </div>            
 
