--- a/index.html
+++ b/index.html
@@ -593,11 +593,11 @@
                 </span>
             </div>            
                 <!-- https://countapi.xyz/    documentation
-                    https://api.countapi.xyz/info/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef   info
-                    https://api.countapi.xyz/create?namespace=hakimduparcq.github.io&enable_reset=1   create key
-                    https://api.countapi.xyz/set/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?value=0    reset value
-                    https://api.countapi.xyz/hit/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?callback=cb    add +1
-                    https://api.countapi.xyz/get/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef    get the value
+                    https://api.countapi.xyz/info/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef                  info
+                    https://api.countapi.xyz/create?namespace=hakimduparcq.github.io&enable_reset=1                           create key
+                    https://api.countapi.xyz/set/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?value=0           reset value
+                    https://api.countapi.xyz/hit/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?callback=cb       add +1 to value
+                    https://api.countapi.xyz/get/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef                   get the value
 
 
 
