--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                             document.getElementById('visits').innerText = response.value;
                         }
                         </script>
-                        <script async src="https://api.countapi.xyz/hit/hakimduparcq.gituhb.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?callback=cb"></script>
+                        <script async src="https://api.countapi.xyz/hit/hakimduparcq.github.io/5d604e72-bab4-4b73-baa3-b4ef8c3a32ef?callback=cb"></script>
                 </span>
             </div>            
                 <!-- https://countapi.xyz/    documentation
