--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <a href="#0" class="btn btn--stroke full-width">Hire Me</a>
                 </div>-->
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="images\hakim_galerie\DUPARCQ HAKIM CV 2021 English.pdf" class="btn btn--primary full-width">Download CV</a>
+                    <a href="images\hakim_galerie\DUPARCQ HAKIM CV 2023.pdf" class="btn btn--primary full-width">Download CV</a>
                 </div>
             </div>
 
@@ -164,12 +164,12 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2021 - Present</p>
+                                <p class="timeline__timeframe">2018 - Present</p>
                                 <h3 class="item-title">Engineering school</h3>
                                 <h5>ISEN Lille</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Engineering cycle: Currently in Master 1 Specialization: software development and video games
+                                <p>Engineering cycle: Currently in Master 2 Specialization: software development and video games
                                     Unity - Unreal - AI - Mobile App Development - Data Visualization
                                 </p>
                             </div>
@@ -200,12 +200,13 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2018 - 2021</p>
-                                <h3 class="item-title">Engineering school</h3>
-                                <h5>ISEN Lille</h5>
+                                <p class="timeline__timeframe">2020 - PRESENT</p>
+                                <h3 class="item-title">Video Game School</h3>
+                                <h5>Pole 3D</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>General preparatory cycle: Mathematics / Physics /Engineering science / Communication</p>
+                                <p>Development Gameplay, Engine,
+                                 Tools, Network </p>
                             </div>
                         </div>
 
@@ -216,14 +217,13 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2020</p>
-                                <h3 class="item-title">Assistant biologist technician, secretary, delivery driver, </h3>
-                                <h5>Biocentre Tourcoing laboratory</h5>
+                                <p class="timeline__timeframe">March 2022, 3 months</p>
+                                <h3 class="item-title">Intern Game Developer</h3>
+                                <h5>Visual Dimension bvba, Belgium</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Putting into machine, storing blood samples for analysis (calcium, magnesium, sodium, glycemia, HIV, hepatitis B, COVID19)
-                                    Labeling COVID19 samples, complete patient files on Kalisil, PCR kit preparation, ECBU, stool culture. Envelope and sort paper patient results.
-                                    Tour manager: laboratories, screening centers, clinics, EPAD
+                                <p>Multiplayer AR game prototyping VPS, Unity & Lightship ARDK
+                                    Prize Winner, Lightship Niantic 2022 Hackathon
                                     </p>
                             </div>
                         </div>
@@ -257,27 +257,27 @@
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Python - tensorflow</h4>
+                    <h4 class="item-title">UNITY - c#</h4>
                     <p>
-                    Native language, simple but strong
+                    Very strong Engine
                     </p>
                 </div>
             </div>
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title"> Unity - Unreal </h4>
+                    <h4 class="item-title">UNITY - c#</h4>
                     <p>
-                    The basis for a video game developer
+                    A lovely Engine
                     </p>
                 </div>
             </div>
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title"> Android Studio </h4>
+                    <h4 class="item-title"> UNITY - c# </h4>
                     <p>
-                    Sometimes buggy but we still use it
+                    the reason why i loose hairs
                     </p>
                 </div>
             </div>
