Delate File   +  Link project

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 
     </section> <!-- end s-about -->
 
-
-    <!-- services
-    ================================================== -->
+    <!--
+     services
+    ================================================== 
     <section id="services" class="s-services ss-dark target-section">
 
         <div class="shadow-overlay"></div>
@@ -251,7 +251,7 @@
 
                 <p class="section-desc"> </p>
             </div>
-        </div> <!-- end heading-block -->
+        </div> <!-- end heading-block 
 
         <div class="row services-list block-large-1-3 block-medium-1-2 block-tab-full">
 
@@ -286,9 +286,9 @@
 
             
 
-        </div> <!-- end services-list -->
+        </div>  end services-list 
 
-    </section> <!-- end s-services -->
+    </section> end s-services 
 
 
     <!-- CTA
@@ -357,7 +357,9 @@
                         </div>
     
                         <div class="item-folio__caption">
-                            <p>progress in a house like a punished child, find objects in order to escape</p>
+                            <p>progress in a house like a punished child, find objects
+                            		<a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">freeCodeCamp</a>
+                             in order to escape</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
